Fix misaligned status column on orders report (https://github.com/woocommerce/woocommerce-admin/pull/8121)
* Fix misaligned status column on order report

Add labelPositionToLeft prop to order-status component

Set labelPositionToLeft=true for <OrderStatus> on orders report table

Remove style import

* Add changelogs

Add changelogs

--- a/plugins/woocommerce-admin/packages/components/src/order-status/style.scss
+++ b/plugins/woocommerce-admin/packages/components/src/order-status/style.scss
@@ -1,5 +1,7 @@
 .woocommerce-order-status {
-	display: flex;
+	display: grid;
+	grid-template-columns: min-content min-content;
+	grid-gap: $gap-smallest * 2;
 	align-items: center;
 }
 
@@ -9,7 +11,6 @@
 	height: 16px;
 	display: block;
 	background: $gray-400;
-	margin-right: $gap-smallest * 2;
 	border-radius: 50%;
 	border: 3px solid $gray-100;
 
